css/changelog.styl
.changelog-info
  margin-bottom 20px

.changelogx #page.changelog
  body, h1, h2, h3, h4, p, table
    padding 0
    margin 0

  ol li
    margin-bottom 5px

  .release
    padding 10px 16px
    border 2px solid transparent
    border-radius 4px

    &.highlighted
      border 2px solid darken(highlight-color, 20)
      background-color highlight-color

  .separator
    margin 10px 0
    border-bottom 1px dashed #ddd

  h1
    font-size 12pt
    padding-top 5px
    padding-bottom 5px

  h2
    font-size 11pt
    padding-top 5px
    padding-bottom 5px

  p
    padding-top 5px
    padding-bottom 5px
    font-size 9pt
    line-height 14pt

  .infobox
    border 0 solid silver
    clear both

  .infobox h3
    font-size 8pt
    border-bottom 1px solid silver
    background-color #e2ecfe
    padding 3px 5px
    color #000

  .changes
    margin 0 !important
    padding-left 30px
    list-style-type none
    padding-right 0

  .changes li
    margin-bottom 1px
    clear both

  .titlebox
    line-height 20px

  h4
    minor-button()
    line-height 26px
    float left
    min-height 26px
    min-width 110px
    text-align center

    a
      padding 0 6px 0 6px
      text-decoration none

    a:before
      padding-right 6px
      display inline-block
      font-family FontAwesome
      font-style normal
      font-weight normal
      line-height 1
      -webkit-font-smoothing antialiased
      -moz-osx-font-smoothing grayscale
      content "\f019"

    span
      padding 0 6px 0 32px

  h5
    margin 0 !important
    font-size 11px !important
    color #888 !important
    line-height 11px !important
    font-weight normal !important
    padding-left 16px !important
    float left !important
    padding-top 10px !important

  .sticker
    float left
    width 80px
    display block
    text-align right
    background none

  .sticker b
    color white
    font-weight bold
    padding 2px 6px 2px 6px
    border-radius 3px
    font-size 10px
    position relative
    text-transform uppercase
    top -5px

  .fixed b
    background-color #00A825

  .new b
    background-color #BCB901

  .removed b
    background-color #BC0E00

  .improved b
    background-color #0486BC

  .note b
    background-color #AEAEAE

  .known_bug b
    background-color #f98d02

  .alert b
    background-color #AE5555

  .info
    display table-cell
    padding-left 16px
    font-size 12px

  .changes i
    color: #999;
    font-style: normal;
    font-size: 10px;

  .changes em
    font-style normal
    font-size 10px
    background-color: #FCFFDD;
    padding: 1px 3px;
    border: 1px solid #ccc;
    margin-left: 2px;
    color: #999;
    border-radius: 2px;
    position relative
    top -1px
    white-space no-wrap

  .announce
    padding: 2px 6px;
    background-color: #FCFFDD;
    border: 1px solid #ccc;
    border-radius: 4px;
    display: inline-block;
    margin-bottom: 8px;
    margin-left: 9px;

